# image-exif-analyzer

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md  THIRD_PARTY_LICENSES
.github/workflows/: npm-publish-github-packages.yml
npm-package/: image_exif_analyzer.js  image_exif_analyzer_bg.wasm  main.js  package-lock.json  package.json  vite.config.js
rust-project/: Cargo.toml
rust-project/src/: exif.rs  lib.rs
